--- a/About.Me.html
+++ b/About.Me.html
@@ -40,7 +40,7 @@
 
     <section class="short" id="contact-info">
         <h2 style="text-align: left;" >Contact Information</h2>
-        <h3>Contact Form: If you have any questions please contact me at<br><p>Email: 278577@burlcoschools.org<br></p><p>609-500-4476</p>
+        <h3>Contact Form: If you have any questions please contact me at<br><p>Email: 278577@burlcoschools.org<br></p>
 
 
         </h3>
